--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "image service, duplicate image in lower resolution and save to s3 ",
   "main": "index.js",
   "dependencies": {
-    "async": "^1.3.0",
     "aws-sdk": "^2.1.36",
     "express": "^4.13.0",
     "gm": "^1.18.1",
     "imagemagick": "^0.1.3",
     "multer": "^0.1.8",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "winston": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
