--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.13.0",
     "gm": "^1.18.1",
     "imagemagick": "^0.1.3",
+    "lodash": "^3.10.0",
     "nodetime": "^0.8.15",
     "q": "^1.4.1",
     "winston": "^1.0.1"
