--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.1.36",
-    "connect-multiparty": "^1.2.5",
     "express": "^4.13.0",
     "gm": "^1.18.1",
     "imagemagick": "^0.1.3",
     "lodash": "^3.10.0",
+    "multer": "^0.1.8",
     "nodetime": "^0.8.15",
     "q": "^1.4.1",
     "winston": "^1.0.1"
