--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.1.36",
+    "body-parser": "^1.13.2",
     "express": "^4.13.0",
     "gm": "^1.18.1",
+    "image-size": "^0.3.5",
     "imagemagick": "^0.1.3",
     "lodash": "^3.10.0",
     "multer": "^0.1.8",
