--- a/package.json
+++ b/package.json
@@ -12,14 +12,25 @@
     "imagemagick": "^0.1.3",
     "lodash": "^3.10.0",
     "multer": "^0.1.8",
-    "nodetime": "^0.8.15",
     "q": "^1.4.1",
     "request": "^2.58.0",
     "winston": "^1.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "blanket": "^1.1.7",
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5",
+    "sinon": "^1.15.4",
+    "sinon-chai": "^2.8.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha && mocha test --require blanket --reporter html-cov > coverage.html"
+  },
+  "config": {
+    "blanket": {
+      "pattern": ["server/src/check-json-file-structure.js"],
+      "data-cover-never": "node_modules"
+    }
   },
   "author": "Albert",
   "license": "ISC"
