--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "image-size": "^0.3.5",
     "imagemagick": "^0.1.3",
     "lodash": "^3.10.0",
+    "mkdirp": "^0.5.1",
     "multer": "^0.1.8",
+    "node-uuid": "^1.4.3",
     "q": "^1.4.1",
     "request": "^2.58.0",
     "winston": "^1.0.1"
@@ -28,7 +30,9 @@
   },
   "config": {
     "blanket": {
-      "pattern": ["server/src/check-json-file-structure.js"],
+      "pattern": [
+        "server/src/check-json-file-structure.js"
+      ],
       "data-cover-never": "node_modules"
     }
   },
