--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "imageservice",
   "version": "1.0.0",
   "description": "http service that resizes an image with several resolutions then uploads everything to S3",
-  "main": "index.js",
+  "main": "server/src/index.js",
   "dependencies": {
     "aws-sdk": "^2.6.15",
     "body-parser": "^1.13.2",
@@ -15,8 +15,7 @@
     "multer": "^0.1.8",
     "node-uuid": "^1.4.3",
     "q": "^1.4.1",
-    "request": "^2.58.0",
-    "winston": "^1.0.1"
+    "request": "^2.58.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
@@ -27,7 +26,7 @@
     "sinon-chai": "^2.8.0"
   },
   "scripts": {
-    "run": "nodemon server/src/index.js",
+    "serve": "nodemon server/src/index.js",
     "test": "mocha && mocha test --require blanket --reporter html-cov > coverage.html"
   },
   "config": {
