--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "http service that resizes an image with several resolutions then uploads everything to S3",
   "main": "server/src/index.js",
+  "repository": "Sistemium/imageService",
   "dependencies": {
     "aws-sdk": "^2.6.15",
     "body-parser": "^1.13.2",
+    "debug": "^2.3.2",
     "express": "^4.14.0",
     "gm": "^1.23.0",
     "image-size": "^0.3.5",
