--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "main": "server/src/index.js",
   "repository": "Sistemium/imageService",
   "dependencies": {
-    "aws-sdk": "^2.6.15",
-    "body-parser": "^1.15.2",
-    "debug": "^2.3.2",
-    "express": "^4.14.0",
+    "aws-sdk": "^2.686.0",
+    "body-parser": "^1.19.0",
+    "debug": "^2.6.9",
+    "esm": "^3.2.25",
+    "express": "^4.17.1",
     "gm": "^1.23.0",
-    "image-size": "^0.5.0",
+    "image-size": "^0.8.3",
     "imagemagick": "^0.1.3",
-    "lodash": "^4.16.6",
-    "mkdirp": "^0.5.1",
-    "multer": "^1.2.0",
-    "node-uuid": "^1.4.3",
-    "q": "^1.4.1",
-    "request": "^2.78.0"
+    "lodash": "^4.17.15",
+    "mkdirp": "^1.0.4",
+    "multer": "^1.4.2",
+    "uuid": "^1.4.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0",
+    "nodemon": "^2.0.4",
     "blanket": "^1.1.7",
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
@@ -28,7 +28,7 @@
     "sinon-chai": "^2.8.0"
   },
   "scripts": {
-    "serve": "nodemon server/src/index.js",
+    "serve": "nodemon --exec 'node -r esm' -- server/src",
     "test": "mocha && mocha test --require blanket --reporter html-cov > coverage.html"
   },
   "config": {
