--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "debug": "^2.6.9",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "gm": "^1.23.0",
     "image-size": "^0.8.3",
     "imagemagick": "^0.1.3",
     "lodash": "^4.17.15",
     "mkdirp": "^1.0.4",
     "multer": "^1.4.2",
-    "uuid": "^1.4.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sharp": "^0.25.3",
+    "uuid": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
