--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "^4.3.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "file-type": "^16.5.2",
     "image-size": "^0.8.3",
     "lodash": "^4.17.20",
     "mkdirp": "^1.0.4",
