--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "image-size": "^0.8.3",
     "lodash": "^4.17.20",
     "mkdirp": "^1.0.4",
+    "mmmagic": "^0.5.3",
     "multer": "^1.4.2",
     "request": "^2.88.2",
     "sharp": "^0.26.2",
